<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".UpdateIngredientActivity">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:text="@string/ingredients_now" />

                    <TextView
                        android:id="@+id/updateNowStockText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:gravity="end"
                        android:paddingTop="8dp"
                        android:layout_weight="1"
                        tools:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:text="@string/ingredients_min" />

                    <TextView
                        android:id="@+id/updateMinStockText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:gravity="end"
                        android:paddingTop="8dp"
                        android:layout_weight="1"
                        tools:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:text="@string/ingredients_price" />

                    <TextView
                        android:id="@+id/updatePriceIngredientText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:gravity="end"
                        android:paddingTop="8dp"
                        android:layout_weight="1"
                        tools:text="0" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutUpdateSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputUpdateSize"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_ingredient_count"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textStyle="bold"
                    android:text="@string/price_total" />

                <TextView
                    android:id="@+id/updateTotalPriceText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingBottom="8dp"
                    android:textStyle="bold"
                    tools:text="Rp. 1000" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />

        <ProgressBar
            android:id="@+id/updateProgress"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:layout_gravity="center" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>